--- a/index.html
+++ b/index.html
@@ -128,17 +128,17 @@
     <a href="#contact">Contact</a>
   </nav>
   <section id="home">
-    <h2>A Tragicomic Arthouse Short</h2>
-    <p>Solitary Solicitudes (~25 minutes) follows a man’s gray, repetitive life—coffee, oatmeal, odd rituals—unraveling into surreal violence and confession. Shot in Alabama, its stark aesthetic and vivid blood amplify psychological depth.</p>
+    <h2>A Tragicomic Arthouse Film</h2>
+    <p>Solitary Solicitudes follows a man’s gray, repetitive life unraveling into surreal violence and confession. Shot in North Alabama.</p>
     <div class="image-placeholder">[Placeholder: Gray apartment or oatmeal close-up]</div>
   </section>
   <section id="about-film">
     <h2>About the Film</h2>
-    <p>This tragicomic arthouse short blends parody and psychological drama. A man’s monotonous routines in a textureless world spiral into a neighbor’s massacre and a haunting confession. With practical effects (blood rigs, natural light), it’s a striking indie debut targeting Sundance, Sidewalk Film Festival, and MUBI.</p>
+    <p>A tragicomic arthouse film that blends parody and psychological drama. A man’s monotonous routines in a textureless world slowly spiral out of his control.</p>
   </section>
   <section id="about-filmmaker">
     <h2>About the Filmmaker</h2>
-    <p>A first-time filmmaker and sole proprietor based in Alabama, I’m passionately managing every aspect of Solitary Solicitudes. With meticulous planning and a love for psychological storytelling, I’m bringing raw authenticity to this dark, human tale.</p>
+    <p>A first-time filmmaker and sole proprietor based in Alabama, I’m passionately managing every aspect of Solitary Solicitudes.</p>
   </section>
   <section id="contact">
     <h2>Contact</h2>
